# diffuse_to_clone

./: .gitignore  Dockerfile  LICENSE  README.md  claim_files.sh  datapoints.txt  guide_mode.py  run_docker.sh  terminal_docker.sh
bags/train_logs/DiffusionTrainer_lr_1e-05_bs_64_epochs_100_steps_500000function_27-11-2023_16-49-47/: events.out.tfevents.1701121787.abhinav-Legion-5-15ARH7.108.0
bags/train_logs/DiffusionTrainer_lr_1e-05_bs_64_epochs_100_steps_500000function_27-11-2023_16-50-35/: events.out.tfevents.1701121835.abhinav-Legion-5-15ARH7.147.0
bags/train_logs/DiffusionTrainer_lr_1e-05_bs_64_epochs_100_steps_500000function_27-11-2023_16-51-13/: events.out.tfevents.1701121873.abhinav-Legion-5-15ARH7.279.0
bags/train_logs/DiffusionTrainer_lr_1e-05_bs_64_epochs_100_steps_500000function_27-11-2023_16-52-38/: events.out.tfevents.1701121958.abhinav-Legion-5-15ARH7.412.0
bags/train_logs/DiffusionTrainer_lr_1e-05_bs_64_epochs_100_steps_500000function_27-11-2023_16-53-15/: events.out.tfevents.1701121995.abhinav-Legion-5-15ARH7.551.0
bags/train_logs/DiffusionTrainer_lr_1e-05_bs_64_epochs_100_steps_500000function_27-11-2023_16-56-02/: events.out.tfevents.1701122162.abhinav-Legion-5-15ARH7.690.0
bags/train_logs/DiffusionTrainer_lr_1e-05_bs_64_epochs_100_steps_500000function_27-11-2023_16-56-10/: events.out.tfevents.1701122170.abhinav-Legion-5-15ARH7.727.0
dataset/: __init__.py  audio_classifier_dataset.py  audio_wav_saver.py  data_utils.py  dataset.py  live_audio_wav_saver.py  npy_analyzer.py  preprocess_audio.py
networks/: audio_classifier.py  audio_cnn.py  bc_model.py  bc_trainer.py  debug_inputs.txt  diffusion_model.py  diffusion_model_utils.py  diffusion_model_vision.py  diffusion_trainer.py  exp.txt  fc_model.py  fc_trainer.py  imitation_train_memory.py  lstm_model.py  lstm_model_vision.py  lstm_trainer.py  model_trainer.py  model_trainer_V2.py  model_utils.py  network_evaluator.py  network_utils.py  test_pkl_file.py  train.py  train_audio_classifier.py  train_diffusion.py  train_fc.py  train_lstm.py
src/il_packages/manipulation/: CMakeLists.txt  package.xml
src/il_packages/manipulation/config/: config.json  teleop.yaml
src/il_packages/manipulation/launch/: data_collect_vision.launch  demo_moveit.launch  realsense.launch  record_audio.launch  sensors.launch  teleop.launch
src/il_packages/manipulation/src/: data_class.py  data_class_block.py  data_class_choose_coins.py  data_class_two_blocks.py  joy_to_action.py  manip_primitives.py  modify_pkl_file.py  moveit_class.py  preprocess_audio.py  read_audio_file.py  read_pkl_file.py  record_toy_dataset.py  record_trajectories_manual.py  record_trajectories_moveit.py  reset_arm.py  robot_joint_converter.py  test_audio.py  test_audio_from_npz.py  test_network.py
(+9 files in other folders)
